--- a/hm-08/index.html
+++ b/hm-08/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../hm-08/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto:300" rel="stylesheet">
     <!-- <link rel="stylesheet" href="../hm-08/css/media.css"> -->
     <title>Document</title>
 </head>
